[package]
name = "rust_project_complete_human"
version = "0.1.0"
edition = "2024"

[dependencies]
dhat = "0.3.3"
rustfmt = "0.10.0"

# [profile.release]
# debug = 1

[profile.release]
incremental = true
debug = true
lto = "fat"

[features]
dhat-heap = []    # if you are doing heap profiling
dhat-ad-hoc = []  # if you are doing ad hoc profiling